--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/FallenMan13/Chatroom-attempt.git"
+  },
   "keywords": [
     "chatroom"
   ],
   "author": "FallenMan13",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/FallenMan13/Chatroom-attempt/issues"
+  },
+  "homepage": "https://github.com/FallenMan13/Chatroom-attempt#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
     "ejs": "^2.5.6",
