--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
-    "redis": "^2.7.1",
+    "redis": "^2.7.1"
   }
 }
