--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
   "homepage": "https://github.com/FallenMan13/Chatroom-attempt#readme",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "connect-ensure-login": "^0.1.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
     "express-session": "^1.15.1",
+    "passport": "^0.3.2",
+    "passport-auth0": "^0.6.0",
     "redis": "^2.7.1",
     "socket.io": "^1.7.3"
   }
